# BFU-CATP-Assignments

./: CMakeLists.txt  README.md  main.cpp
Headers/: BasicShapes.cpp  BasicShapes.h  PhysicalObjects.cpp  PhysicalObjects.h
Headers/ClothSimulation/: Cloth.h
Headers/Collision/: Collision.cpp  Collision.h
Headers/MassSpringSystem/: MassSpringTEMPLATE.h
Headers/Objects/: Objects2D.cpp  Objects2D.h  Objects3D.cpp  PhysicalObjects.cpp  PhysicalObjects.h
Headers/ParticleSystem/: Fireworks.h  ParticleGenerator.h
Headers/Samples/: Scene01.cpp
Headers/Scenes/: Assignment_0.cpp  Assignment_1.cpp  Assignment_2.cpp  HelloHina.cpp  Scene01.cpp  Scene02.cpp  SceneTEMPLATE.h  Scene_sample2D_01.cpp
Headers/Shapes/: BasicShapes.cpp  BasicShapes.h  Shapes2D.cpp
Headers/Solvers/: EluerSolver.cpp  EulerSolver.cpp
Headers/World2D/: BasicShapes2D.cpp  BasicShapes2D.h  Renderer2D.cpp  Renderer2D.h
Headers/World3D/: BasicShapes3D.cpp  BasicShapes3D.h  Renderer3D.cpp  Renderer3D.h
Headers/physics/: BasicShapes.cpp  BasicShapes.h  Scene.cpp  Scene.h
Headers/utils/: Camera.cpp  Camera.h  Imgui_interface.h  Model.cpp  Model.h  OpenGL_interface.h  Shader.cpp  Shader.h  config.h  initializer.h
headers/: camera.h  scene.h
images/: a.mov  present480.mov
include/Eigen/src/IterativeLinearSolvers/: IterativeSolverBase.h
include/Eigen/src/SparseCore/: SparseSolverBase.h
include/glad/: glad.h
src/: glad.c  main.cpp
srcs/: scene.cpp
